src/test/ui/issue-17905.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-17905.rs:15:5
   |
LL |     &str, //~ ERROR missing lifetime specifier
   |     ^ expected lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
